fixed hero on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1532,10 +1532,6 @@ body.no-scroll {
     }
 
     .hero__CTA {
-        position: absolute;
-        bottom: 5%;
-        left: 10%;
-        right: 10%;
         width: 80%;
         max-width: 100%;
         align-items: center;
